[package]
name = "http-capture"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
crossbeam = "0.8.4"
crossterm = "0.28.1"
etherparse = "0.15.0"
flate2 = "1.0.30"
httparse = "1.9.4"
log = { version = "0.4.22", features = ["std"] }
pcap = "2.0.0"
ratatui = "0.28.0"
