[package]
name = "http-capture"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
crossbeam = "0.8.4"
crossterm = "0.29.0"
etherparse = "0.19.0"
flate2 = "1.1.2"
httparse = "1.10.1"
log = { version = "0.4.27", features = ["std"] }
pcap = "2.3.0"
ratatui = "0.29.0"
